corpus/commands.txt
================================================================================
Simple command with args
================================================================================

Test foo

--------------------------------------------------------------------------------

(script_file
  (user_command
    (command_name)
    (arguments
      (command_argument))))

================================================================================
Simple command with bang
================================================================================

Test!

--------------------------------------------------------------------------------

(script_file
  (user_command
    (command_name)
    (bang)))

================================================================================
Simple command with weird arguments
================================================================================

Test a.b.c a:foobar

--------------------------------------------------------------------------------

(script_file
  (user_command
    (command_name)
    (arguments
      (command_argument)
      (command_argument))))

================================================================================
Simple command without args
================================================================================

Test

--------------------------------------------------------------------------------

(script_file
  (user_command
    (command_name)))

================================================================================
Simple command multiline
================================================================================

Test foo
	\ foo

--------------------------------------------------------------------------------

(script_file
  (user_command
    (command_name)
    (arguments
      (command_argument)
      (command_argument))))

================================================================================
Multiple commands pipe
================================================================================

Test | Test

--------------------------------------------------------------------------------

(script_file
  (user_command
    (command_name))
  (user_command
    (command_name)))

================================================================================
Throw statement
================================================================================

throw abc
thr abc

--------------------------------------------------------------------------------

(script_file
  (throw_statement
    (identifier))
  (throw_statement
    (identifier)))

================================================================================
Execute statement
================================================================================

execute "abd"
exe "foobar" .. "bcd"
exe "foobar" .. "bcd" foor

--------------------------------------------------------------------------------

(script_file
  (execute_statement
    (string_literal))
  (execute_statement
    (binary_operation
      (string_literal)
      (string_literal)))
  (execute_statement
    (binary_operation
      (string_literal)
      (string_literal))
    (identifier)))

================================================================================
Execute in if
================================================================================

if v:true
  exe foo
endif

--------------------------------------------------------------------------------

(script_file
  (if_statement
    (scoped_identifier
      (scope)
      (identifier))
    (body
      (execute_statement
        (identifier)))))

================================================================================
User command with string
================================================================================

Plug 'abcd'
Plug 'abcd efgh' foo

--------------------------------------------------------------------------------

(script_file
  (user_command
    (command_name)
    (arguments
      (command_argument
        (string_literal))))
  (user_command
    (command_name)
    (arguments
      (command_argument
        (string_literal))
      (command_argument))))

================================================================================
startinsert
================================================================================

startinsert
star
startinsert " HEWO

--------------------------------------------------------------------------------

(script_file
  (startinsert_statement)
  (startinsert_statement)
  (startinsert_statement)
  (comment))

================================================================================
stopinsert
================================================================================

stopinsert
stopins
stopi

--------------------------------------------------------------------------------

(script_file
  (stopinsert_statement)
  (stopinsert_statement)
  (stopinsert_statement))

================================================================================
comclear
================================================================================

comclear
comc

--------------------------------------------------------------------------------

(script_file
  (comclear_statement)
  (comclear_statement))

================================================================================
Colon in commands
================================================================================

:echo "foo"

autocmd InsertLeave * :set norelnu

--------------------------------------------------------------------------------

(script_file
  (echo_statement
    (string_literal))
  (autocmd_statement
    (au_event_list
      (au_event))
    (pattern)
    (set_statement
      (set_item
        (no_option
          (option_name))))))
