corpus/function_defs.txt
================================================================================
Function definitions end keywords
================================================================================

function f()
end

function f()
endf

function f()
endfu

function f()
endfunction

--------------------------------------------------------------------------------

(script_file
  (function_definition
    (function_declaration
      (identifier)
      (parameters)))
  (function_definition
    (function_declaration
      (identifier)
      (parameters)))
  (function_definition
    (function_declaration
      (identifier)
      (parameters)))
  (function_definition
    (function_declaration
      (identifier)
      (parameters))))

================================================================================
Function definition without body
================================================================================

function foo()
end

--------------------------------------------------------------------------------

(script_file
  (function_definition
    (function_declaration
      (identifier)
      (parameters))))

================================================================================
Function definition with body
================================================================================

function foo()
	let bar = 31
end

--------------------------------------------------------------------------------

(script_file
  (function_definition
    (function_declaration
      (identifier)
      (parameters))
    (body
      (let_statement
        (identifier)
        (integer_literal)))))

================================================================================
Function with args and spread
================================================================================

function foo(a, b, ...)
end

--------------------------------------------------------------------------------

(script_file
  (function_definition
    (function_declaration
      (identifier)
      (parameters
        (identifier)
        (identifier)
        (spread)))))

================================================================================
Function with spread
================================================================================

function foo(...)
end

--------------------------------------------------------------------------------

(script_file
  (function_definition
    (function_declaration
      (identifier)
      (parameters
        (spread)))))

================================================================================
Script local function
================================================================================

function <SID>foo()
endfunction

--------------------------------------------------------------------------------

(script_file
  (function_definition
    (function_declaration
      (scoped_identifier
        (scope)
        (identifier))
      (parameters))))

================================================================================
Function return integer
================================================================================

function foo()
  return 1
endfunction

--------------------------------------------------------------------------------

(script_file
  (function_definition
    (function_declaration
      (identifier)
      (parameters))
    (body
      (return_statement
        (integer_literal)))))

================================================================================
Function empty return
================================================================================

function foo()
  return
endfunction

--------------------------------------------------------------------------------

(script_file
  (function_definition
    (function_declaration
      (identifier)
      (parameters))
    (body
      (return_statement))))

================================================================================
Function with definition arguments
================================================================================

function foo() dict abort range closure
  return
endfunction

function foo() abort dict range closure
  return
endfunction

--------------------------------------------------------------------------------

(script_file
  (function_definition
    (function_declaration
      (identifier)
      (parameters))
    (body
      (return_statement)))
  (function_definition
    (function_declaration
      (identifier)
      (parameters))
    (body
      (return_statement))))
