corpus/let_statement.txt
================================================================================
Let global
================================================================================

let g:foo = 1

--------------------------------------------------------------------------------

(script_file
  (let_statement
    (scoped_identifier
      (scope)
      (identifier))
    (integer_literal)))

================================================================================
Let arguments
================================================================================

let a:foo = 1
let a:0 = 30
let a:000 = {}

--------------------------------------------------------------------------------

(script_file
  (let_statement
    (argument
      (identifier))
    (integer_literal))
  (let_statement
    (argument
      (integer_literal))
    (integer_literal))
  (let_statement
    (argument
      (integer_literal))
    (dictionnary)))

================================================================================
Let destructuring
================================================================================

let [fleh, b, c] = [1, 2, 3]

--------------------------------------------------------------------------------

(script_file
  (let_statement
    (list
      (identifier)
      (identifier)
      (identifier))
    (list
      (integer_literal)
      (integer_literal)
      (integer_literal))))

================================================================================
Let local variable
================================================================================

let l:foo = l:bar

--------------------------------------------------------------------------------

(script_file
  (let_statement
    (scoped_identifier
      (scope)
      (identifier))
    (scoped_identifier
      (scope)
      (identifier))))

================================================================================
Let variable named like scopes
================================================================================

let a = 1
let b = 1
let g = 1
let l = 1
let w = 1
let t = 1
let v = 1

--------------------------------------------------------------------------------

(script_file
  (let_statement
    (identifier)
    (integer_literal))
  (let_statement
    (identifier)
    (integer_literal))
  (let_statement
    (identifier)
    (integer_literal))
  (let_statement
    (identifier)
    (integer_literal))
  (let_statement
    (identifier)
    (integer_literal))
  (let_statement
    (identifier)
    (integer_literal))
  (let_statement
    (identifier)
    (integer_literal)))
