corpus/range_statement.txt
=============================
Range simple
=============================

%

---

(script_file (range_statement (file)))

=============================
Range one line
=============================

1

---

(script_file (range_statement (line_number)))

=============================
Range two line
=============================

1,39

---

(script_file (range_statement (line_number) (line_number)))

=============================
Range line and eof
=============================

1,$

---

(script_file (range_statement (line_number) (last_line)))

=============================
Range marks
=============================

'a

---

(script_file (range_statement (mark)))

=============================
Range patterns
=============================

/foobar/,'b

---

(script_file (range_statement (pattern) (mark)))

=============================
Range last pattern
=============================

\/,\?

---

(script_file (range_statement (previous_pattern) (previous_pattern)))
